--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hibernateMappings
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hb-01-one-to-one-uni
+spring.datasource.url=jdbc:mysql://localhost:3306/hb-03-one-to-many
 spring.datasource.username=root
 spring.datasource.password=hari1234
 spring.main.banner-mode=off
